vlib/v/checker/tests/blank_assign_b.out
vlib/v/checker/tests/blank_assign_b.v:2:2: error: cannot assign to blank `_` variable
    1 | fn main() {
    2 |     _ += 1
      |     ^
    3 | }
